Formalize, standardize and document CityList filter options
- incontains filtering on name, admin
- range filtering on population
- equality filtering on region
- bbox filtering on city point geom
- sorting options via ordering param

Documentation updated

All options tested
